Skills section overflow bug fold phone

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,11 +7,7 @@
 }
 
 html,
-body,
-h1,
-h2,
-h3,
-h4 {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Fira Sans', sans-serif, -apple-system,
@@ -46,6 +42,10 @@ h4 {
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
 	background: ivory;
+}
+
+#fp-nav.fp-right {
+	right: 0.5rem;
 }
 
 button {
